data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2564.wast
;; 5. **Test Description**:    Test a block with mismatched input operand types such as initiating a block expecting integers but receiving floating-point numbers, ensuring that type errors are raised.    **Constraint:** Ensuring input type matching for block initialization.    **Relation to Type Mismatch:** Verifies that initial operand types adhere to the block's expected input.

(assert_invalid
  (module
    (func $block-type-mismatch
      (f32.const 1.0)
      (block (param i32) (drop))
    )
  )
  "type mismatch"
)